MSVSCPP_FILES = \
	fsxfs_test_error/fsxfs_test_error.vcproj \
	fsxfs_test_io_handle/fsxfs_test_io_handle.vcproj \
	fsxfs_test_notify/fsxfs_test_notify.vcproj \
	fsxfs_test_superblock/fsxfs_test_superblock.vcproj \
	fsxfs_test_support/fsxfs_test_support.vcproj \
	fsxfs_test_volume/fsxfs_test_volume.vcproj \
	fsxfsinfo/fsxfsinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfguid/libfguid.vcproj \
	libfsxfs/libfsxfs.vcproj \
	libuna/libuna.vcproj \
	pyfsxfs/pyfsxfs.vcproj \
	libfsxfs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

