MSVSCPP_FILES = \
	fsxfs_test_attribute_values/fsxfs_test_attribute_values.vcproj \
	fsxfs_test_attributes_leaf_block_header/fsxfs_test_attributes_leaf_block_header.vcproj \
	fsxfs_test_attributes_table/fsxfs_test_attributes_table.vcproj \
	fsxfs_test_attributes_table_header/fsxfs_test_attributes_table_header.vcproj \
	fsxfs_test_block_directory_footer/fsxfs_test_block_directory_footer.vcproj \
	fsxfs_test_block_directory_header/fsxfs_test_block_directory_header.vcproj \
	fsxfs_test_btree_block/fsxfs_test_btree_block.vcproj \
	fsxfs_test_btree_header/fsxfs_test_btree_header.vcproj \
	fsxfs_test_buffer_data_handle/fsxfs_test_buffer_data_handle.vcproj \
	fsxfs_test_directory_entry/fsxfs_test_directory_entry.vcproj \
	fsxfs_test_directory_table_header/fsxfs_test_directory_table_header.vcproj \
	fsxfs_test_error/fsxfs_test_error.vcproj \
	fsxfs_test_extent/fsxfs_test_extent.vcproj \
	fsxfs_test_file_system_block_header/fsxfs_test_file_system_block_header.vcproj \
	fsxfs_test_inode_btree/fsxfs_test_inode_btree.vcproj \
	fsxfs_test_inode_btree_record/fsxfs_test_inode_btree_record.vcproj \
	fsxfs_test_inode_information/fsxfs_test_inode_information.vcproj \
	fsxfs_test_io_handle/fsxfs_test_io_handle.vcproj \
	fsxfs_test_notify/fsxfs_test_notify.vcproj \
	fsxfs_test_superblock/fsxfs_test_superblock.vcproj \
	fsxfs_test_support/fsxfs_test_support.vcproj \
	fsxfs_test_tools_info_handle/fsxfs_test_tools_info_handle.vcproj \
	fsxfs_test_tools_output/fsxfs_test_tools_output.vcproj \
	fsxfs_test_tools_signal/fsxfs_test_tools_signal.vcproj \
	fsxfs_test_volume/fsxfs_test_volume.vcproj \
	fsxfsinfo/fsxfsinfo.vcproj \
	fsxfsmount/fsxfsmount.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsxfs/libfsxfs.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	pyfsxfs/pyfsxfs.vcproj \
	libfsxfs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

